# pyknos

./: .gitattributes  .gitconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  test.yml  tests.yml
examples/: cde_uci-preserve_output.ipynb  cde_uci.ipynb
pyknos/: __init__.py  __version__.py  version.py
pyknos/mdn/: mdn.py
pyknos/nflows/: __init__.py
pyknos/nflows/distributions/: __init__.py
pyknos/nflows/flows/: __init__.py
pyknos/nflows/nn/: __init__.py
pyknos/nflows/nn/nde/: __init__.py
pyknos/nflows/nn/nets/: __init__.py
pyknos/nflows/transforms/: __init__.py
pyknos/nflows/transforms/splines/: __init__.py
pyknos/nflows/utils/: __init__.py
test/: mdn_test.py
tests/: mdn_test.py
